# nvedit

./: .clang-format  CMakeLists.txt  README.md
include/: EditorWindow.hpp
src/: EditorWindow.cpp  FileTab.cpp  main.cpp
